--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl: /
 
 # Site live URL
-url: http://silviafei.github.io
+url: http://silviafey.github.io
 
 # Localhost
 # url: http://127.0.0.1:4000
@@ -19,8 +19,8 @@ meta_description: Welcome to my site!
 basetheme: theme-base-01 # pre defined thmes are darken, blue-water, redish.
 author: # Author details
   name: Fei Wang
-  email: silviafei.w@gmail.com
-  url: http://silviafei.github.io
+  email: silviafey.w@gmail.com
+  url: http://silviafey.github.io
 
 # Google Analytics key, leave blank to ignore
 google_analytics_key: UA-xxxx-x
