--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: http://silviafeiwang.github.io
 
 name: FEI WANG
 # Little description about your site
-description: Incoming MASc Student @ ECE UofT
+description: MASc Student @ ECE - UofT
 # description: MASc Student @ ECE UofT
 # 'meta_description:' Write an awesome description for your new site here.
 # It will appear in your document head meta (for Google search results) and
