Update website content

--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ url: http://silviafeiwang.github.io
 # Localhost
 # url: http://127.0.0.1:4000
 
-name: FEI WANG
+name: Fei Wang
 # Little description about your site
-description: Ph.D. Candidate @ ECE - UofT
+description: Ph.D. Student @ ECE - UofT
 # description: MASc Student @ ECE UofT
 # 'meta_description:' Write an awesome description for your new site here.
 # It will appear in your document head meta (for Google search results) and
